--- a/OnlineTutor2/Views/Test/RegularTests.cshtml
+++ b/OnlineTutor2/Views/Test/RegularTests.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<OnlineTutor2.Models.RegularTest>
 @{
-    ViewData["Title"] = "Классические тесты";
+    ViewData["Title"] = $"Тесты:{ViewBag.Category.Name}";
     var category = ViewBag.Category as OnlineTutor2.Models.TestCategory;
     var activeTests = Model.Count(t => t.IsActive);
     var inactiveTests = Model.Count(t => !t.IsActive);
